// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-stylesheet-siblings should get sibling stylesheets 1`] = `
{
  "content": [
    {
      "text": "{"totalBefore":2,"totalAfter":0,"items":[{"name":"_TestTargetStylesheet.css","path":"/_TestFolderForSiblings/_TestTargetStylesheet.css","parent":{"path":"/_TestFolderForSiblings","id":"00000000-0000-0000-0000-000000000000"},"isFolder":false,"hasChildren":false,"id":"00000000-0000-0000-0000-000000000000"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-stylesheet-siblings should handle non-existent stylesheet 1`] = `
{
  "content": [
    {
      "text": "{"totalBefore":0,"totalAfter":2,"items":[]}",
      "type": "text",
    },
  ],
}
`;
